--- a/demissao.html
+++ b/demissao.html
@@ -1,67 +1,143 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Registrar Demissão</title>
-<link rel="stylesheet" href="style.css" />
-<script src="menu.js" defer></script>
+  <meta charset="UTF-8">
+  <title>Registrar Demissão</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f9d5ec;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    header {
+      width: 100%;
+      background-color: #f06292;
+      padding: 10px 0;
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+
+    header a {
+      text-decoration: none;
+      background-color: #fff;
+      color: #f06292;
+      font-weight: bold;
+      padding: 10px 15px;
+      border-radius: 8px;
+      transition: 0.3s;
+    }
+
+    header a:hover {
+      background-color: #f8bbd0;
+    }
+
+    main {
+      background-color: white;
+      margin-top: 40px;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      width: 90%;
+      max-width: 700px;
+      text-align: center;
+    }
+
+    h1 {
+      color: #f06292;
+      margin-bottom: 20px;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+
+    input, textarea, select, button {
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      width: 100%;
+    }
+
+    button {
+      background-color: #f06292;
+      color: white;
+      border: none;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #ec407a;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+
+    th, td {
+      padding: 10px;
+      border-bottom: 1px solid #ccc;
+      text-align: center;
+    }
+
+    .actions button {
+      margin: 0 5px;
+      background-color: #f06292;
+      color: white;
+      border: none;
+      padding: 5px 10px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .actions button:hover {
+      background-color: #e91e63;
+    }
+
+    .sort-container {
+      margin-top: 10px;
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    .sort-container select {
+      max-width: 200px;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
+  <header>
+    <a href="index.html">Início</a>
+    <a href="cadastrar.html">Cadastrar Funcionário</a>
+    <a href="ativos.html">Funcionários Ativos</a>
+    <a href="inativos.html">Funcionários Inativos</a>
+    <a href="ferias.html">Lançar Férias</a>
+    <a href="demissao.html">Registrar Demissão</a>
+    <a href="aviso.html">Aviso Prévio</a>
+    <a href="relatorio.html">Gerar Relatório</a>
+  </header>
+
+  <main>
     <h1>Registrar Demissão</h1>
-    <form id="formDemissao">
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" required />
-      <label for="cpf">CPF:</label>
-      <input type="text" id="cpf" required />
-      <label for="dataDemissao">Data da Demissão:</label>
-      <input type="date" id="dataDemissao" required />
-      <label for="motivo">Motivo:</label>
-      <input type="text" id="motivo" required />
-      <label for="local">Local:</label>
-      <input type="text" id="local" required />
-      <button type="submit">Registrar Demissão</button>
-    </form>
-  </div>
-
-  <script>
-    document.getElementById('formDemissao').addEventListener('submit', e => {
-      e.preventDefault();
-      const nome = document.getElementById('nome').value.trim();
-      const cpf = document.getElementById('cpf').value.trim();
-      const dataDemissao = document.getElementById('dataDemissao').value;
-      const motivo = document.getElementById('motivo').value.trim();
-      const local = document.getElementById('local').value.trim();
-
-      if (!nome || !cpf || !dataDemissao || !motivo || !local) {
-        alert('Preencha todos os campos!');
-        return;
-      }
-
-      // Remover da lista ativos (se existir)
-      let ativos = JSON.parse(localStorage.getItem('funcionariosAtivos')) || [];
-      const idxAtivo = ativos.findIndex(f => f.nome === nome && f.cpf === cpf);
-      if (idxAtivo !== -1) {
-        ativos.splice(idxAtivo, 1);
-        localStorage.setItem('funcionariosAtivos', JSON.stringify(ativos));
-      }
-
-      // Adicionar na lista inativos
-      let inativos = JSON.parse(localStorage.getItem('funcionariosInativos')) || [];
-      inativos.push({
-        nome,
-        cpf,
-        dataDemissao: new Date(dataDemissao).toISOString(),
-        motivo,
-        local
-      });
-      localStorage.setItem('funcionariosInativos', JSON.stringify(inativos));
-
-      alert('Demissão registrada com sucesso e funcionário movido para inativos!');
-      e.target.reset();
-    });
-  </script>
-</body>
-</html>
-
+    <form id="demissaoForm">
+      <input type="text" id="nome" placeholder="Nome do Funcionário" required>
+      <input type="text" id="cpf" placeholder="CPF" required>
+      <input type="date" id="data" required>
+      <inp
